WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
127110
[WinCairo][Curl] Download request has incorrect user agent string.
https://bugs.webkit.org/show_bug.cgi?id=127110
Summary
[WinCairo][Curl] Download request has incorrect user agent string.
peavo
Reported
2014-01-16 07:41:42 PST
A download request initiated from WebView, will have the default Curl user agent string. I have experienced failing downloads because of this. We should use the same user agent as in other requests.
Attachments
Patch
(2.29 KB, patch)
2014-01-16 07:49 PST
,
peavo
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
peavo
Comment 1
2014-01-16 07:49:20 PST
Created
attachment 221376
[details]
Patch
Brent Fulgham
Comment 2
2014-01-21 11:19:39 PST
Comment on
attachment 221376
[details]
Patch r=me
WebKit Commit Bot
Comment 3
2014-01-21 11:49:42 PST
Comment on
attachment 221376
[details]
Patch Clearing flags on attachment: 221376 Committed
r162457
: <
http://trac.webkit.org/changeset/162457
>
WebKit Commit Bot
Comment 4
2014-01-21 11:49:44 PST
All reviewed patches have been landed. Closing bug.
peavo
Comment 5
2014-01-21 13:13:49 PST
(In reply to
comment #2
)
> (From update of
attachment 221376
[details]
) > r=me
Thanks for reviewing!
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug