[WinCairo][Curl] Download request has incorrect user agent string. https://bugs.webkit.org/show_bug.cgi?id=127110

Patch by peavo@outlook.com <peavo@outlook.com> on 2014-01-21
Reviewed by Brent Fulgham.

* WebDownloadCurl.cpp:
(WebDownload::init): Set user agent string in download request.
* WebView.cpp:
(WebView::downloadURL): Avoid early return if no ResourceHandle is provided.

Canonical link: https://commits.webkit.org/145369@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@162457 268f45cc-cd09-0410-ab3c-d52691b4dbfc